--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,12 +26,12 @@ jobs:
         displayName: Run tests with coverage
       - task: PublishTestResults@2
         displayName: Publish test results
-        condition: eq(variables['Agent.OS'], 'Linux')
+        condition: eq(variables['Agent.OS'], 'Darwin')
         inputs:
             testResultsFiles: coverage/cobertura.xml
       - task: PublishBuildArtifacts@1
         displayName: Publish HTML coverage report
-        condition: eq(variables['Agent.OS'], 'Linux')
+        condition: eq(variables['Agent.OS'], 'Darwin')
         inputs:
             pathtoPublish: coverage
             artifactName: coverage-report
